# dace

./: .travis.yml  CMakeLists.txt  CPackConf.cmake.in  Doxyfile  NOTICE  README-LINUX  README-MAC.rtf  README.md  deploy.sh
.github/workflows/: cmake-multi-platform.yml  codeql-analysis.yml
ArchLinux/: PKGBUILD
Tutorials/Tutorial1/: CMakeLists.txt  Example-Picard_Iter.cpp  Example1.cpp  Example10.cpp  Example11DA.cpp  Example11DARK78.cpp  Example11Pointwise.cpp  Example12.cpp  Example2.cpp  Example3.cpp  Example4.cpp  Example5.cpp  Example6.cpp  Example7.cpp  Example8.cpp  Example9.cpp
Tutorials/Tutorial2/: 1Basics-Ex.cpp  2IntDiff-Ex.cpp  3Evaluation-Ex.cpp  4Solver-Ex.cpp  5Vectors-Ex.cpp  5Vectors-Ex.plot  6Integrator-Ex.cpp  6Integrator-Ex.plot  7PID-Ex.cpp  7PID-Ex.plot  CMakeLists.txt
cmake/: CheckIfUnderscorePrefixedBesselFunctionsExist.cmake  CheckSafeStrings.cmake  daceConfig.cmake
core/: CMakeLists.txt  daceaux.c  dacebasic.c  dacecompat.c  daceerror.c  daceeval.c  daceinit.c  daceio.c  dacemath.c  dacememory.c  dacenorm.c
core/contrib/: CMakeLists.txt  dgamma.c  libf2c.c  psi.c  ribesl.c  rjbesl.c  rkbesl.c  rybesl.c  zeta.c
core/contrib/include/: dacecontrib.h  f2c.h
core/contrib/netlib/: change.py  dgamma.f  psi.f  ribesl.f  rjbesl.f  rkbesl.f  rybesl.f  zeta.c
core/include/: daceaux.h  daceerror.h
core/include/DA/: dacebase.h  dacecore.h
core/include/dace/: config.h.in  daceaux.h  dacebase.h  dacecompat.h  dacecore.h  dacecore_s.h  daceerror.h
documentation/html/: AlgebraicMatrix_8cpp.html  AlgebraicMatrix_8h.html  AlgebraicMatrix_8h_source.html  AlgebraicMatrix__t_8h.html  AlgebraicMatrix__t_8h_source.html  AlgebraicVector_8cpp.html  AlgebraicVector_8h.html  AlgebraicVector_8h_source.html  AlgebraicVector__t_8h.html  AlgebraicVector__t_8h_source.html  DACEException_8cpp.html  DACEException_8h.html  DACEException_8h_source.html  DAFormatter_8cpp.html  DAFormatter_8h.html  DAFormatter_8h_source.html  DA_8cpp.html  DA_8h.html  DA_8h_source.html  DA__t_8h.html  DA__t_8h_source.html  Def_8h.html  Def_8h_source.html  Info.plist  Interval_8h.html  Interval_8h_source.html  Makefile  MathExtension_8cpp.html  MathExtension_8h.html  MathExtension_8h_source.html  Monomial_8cpp.html  Monomial_8h.html  Monomial_8h_source.html  Nodes.xml  PromotionTrait_8h.html  PromotionTrait_8h_source.html  Tokens.xml  annotated.html  classDACE_1_1AlgebraicMatrix.html  classDACE_1_1AlgebraicVector.html  (+128 more)
interfaces/cxx/: AlgebraicMatrix.cpp  AlgebraicVector.cpp  CMakeLists.txt  DA.cpp  DACEException.cpp  DAFormatter.cpp  MathExtension.cpp  Monomial.cpp  compiledDA.cpp
interfaces/cxx/include/DA/: AlgebraicMatrix.h  AlgebraicMatrix_t.h  AlgebraicVector.h  AlgebraicVector_t.h  DA.h  DACEException.h  DAFormatter.h  DA_t.h  Interval.h  MathExtension.h  Monomial.h  compiledDA.h  compiledDA_t.h  dace.h
interfaces/cxx/include/dace/: AlgebraicMatrix.h  AlgebraicMatrix_t.h  AlgebraicVector.h  AlgebraicVector_t.h  DA.h  DACEException.h  DAFormatter.h  DA_t.h  Def.h  Interval.h  MathExtension.h  Monomial.h  PromotionTrait.h  compat_boost_odeint.h  compiledDA.h  compiledDA_t.h  dace.h  dace_s.h
